--- a/src/main/resources/application-main.yml
+++ b/src/main/resources/application-main.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://prod-db:5432/userdb_prod
-    username: prod_user
-    password: ${DB_PASSWORD}   # Senha vinda de variável de ambiente
+    url: jdbc:postgresql://${PROD_DB_HOST}:5432/userdb_prod
+    username: ${PROD_DB_USER}
+    password: ${PROD_DB_PASSWORD}   # Senha vinda de variável de ambiente
 
 server:
   port: 8080
