--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,11 @@ jobs:
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
     - name: Build with Gradle Wrapper
+      env:
+        # Mapeia os segredos do GitHub para variáveis de ambiente
+        # O Spring Boot automaticamente converte APP_SECURITY_JWT_SECRET para app.security.jwt.secret
+        APP_SECURITY_JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
+        APP_SECURITY_JWT_EXPIRATION-MS: ${{ secrets.TEST_JWT_EXPIRATION_MS }}
       run: ./gradlew build
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
