fix(security): removing hardcoded admin credentials

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,13 +36,11 @@ services:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
       DEV_DB_USER: ${DEV_DB_USER}
       DEV_DB_PASSWORD: ${DEV_DB_PASSWORD}
-      DEV_NAME: ${DEV_NAME}
-      DEV_PASSWORD: ${DEV_PASSWORD}
       STG_DB_USER: ${STG_DB_USER}
       STG_DB_PASSWORD: ${STG_DB_PASSWORD}
-      STG_NAME: ${STG_NAME}
-      STG_PASSWORD: ${STG_PASSWORD}
       APP_SECURITY_JWT_SECRET: ${APP_SECURITY_JWT_SECRET}
+      ADMIN_USER: ${ADMIN_USER}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     ports:
       - "8080:8080"
     depends_on:
