--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,9 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "dev", "staging", "main" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "dev", "staging", "main" ]
+    branches: [ "main" ]
 
 jobs:
   build:
