--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,32 @@
-# spring.application.name=usermanager
-
 spring:
   application:
-    name: usermanager
-
+    name: user-management-api
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
-  datasource:
-    driver-class-name: org.postgresql.Driver
-
   flyway:
     enabled: true
-    locations: classpath:db/migration
 
-# JWT Configuration
+# Configurações customizadas
 app:
   security:
     jwt:
       secret: "${APP_SECURITY_JWT_SECRET}"
-      expiration-ms: 3600000
+      expiration-ms: "${APP_SECURITY_JWT_EXPIRATION_TIME}"
+
+admin:
+  user:
+    name: ${ADMIN_USER}
+    password: ${ADMIN_PASSWORD}
 
 logging:
   level:
     root: INFO
+    org.springframework.security: DEBUG
