chore(test): adding admin test user

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,5 @@
 # This file is git-ignored and should not be committed.
 app.security.jwt.secret=MySuperSecretKeyForTestingPurposesThatIsLongEnough
 app.security.jwt.expiration_ms=3600000
+admin.user.name=admin
+admin.user.password=admin123
